--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -25,7 +25,7 @@ jobs:
       - name: Docker Hub Login
         uses: docker/login-action@v1
         with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          username: frostedcarbon
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
       - name: Run GoReleaser
